# anonymous-tally

./: Cargo.toml  LICENSE  README.md
benches/: scheme_benchmark.rs  scheme_verification_benchmark.rs
src/: domain_separate.rs  encrypt.rs  group_operations.rs  lib.rs  mac.rs  prove_dlog.rs  prove_dlog_or.rs  scheme.rs  scheme_verification.rs  wire_sizeof.rs
