[package]
name = "anonymous_message_report_counting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "scheme_benchmark"
harness = false

[[bench]]
name = "scheme_verification_benchmark"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
x25519-dalek = "0.5"
openssl = "0.10.30"
ed25519-dalek = "1.0.1"
curve25519-dalek = {version = "^2", features = ["serde"] }
sha2 = "0.8"
sha2_10 = {package = "sha2", version = "0.10"}
# curve25519-dalek depends on "0.7.0", which is not the latest rand version.
rand = "0.7.0"
aes = "0.8.1"
hmac = "0.12.1"
crypto-mac = "0.11.1"
digest = "0.10.5"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
cool_asserts = "2.0.3"
serde_with = "3.0.0"
